# linker

./: CMakeLists.txt  Makefile  main.cpp  run_test.sh
src/linker/: archive.cpp  archive.h  chunk.cpp  chunk.h  context.cpp  context.h  elf.cpp  elf.h  file.cpp  file.h  filetype.cpp  filetype.h  input.cpp  input.h  inputfile.cpp  inputfile.h  inputsection.cpp  inputsection.h  machinetype.cpp  machinetype.h  magic.cpp  magic.h  mergeablesection.cpp  mergeablesection.h  mergedsection.cpp  mergedsection.h  objectfile.cpp  objectfile.h  output.cpp  output.h  passes.cpp  passes.h  sectionfragment.cpp  sectionfragment.h  symbol.cpp  symbol.h
src/utils/: utils.cpp  utils.h
tests/: hello.sh  test.c
